syntax = "proto3";
package info;
option go_package = "github.com/arpitbbhayani/grpc-in-depth/infosvc";

service InfoSvc {
    rpc WhatIsGithub (WhatIsGithubRequest) returns (WhatIsGithubResponse) {}
    rpc WhoAmI (WhoAmIRequest) returns (WhoAmIResponse) {}
}

message WhatIsGithubRequest {}  
message WhatIsGithubResponse {
    string text = 1;
}

message WhoAmIRequest {}  
message WhoAmIResponse {
    string username = 1;
}
